# Request_metal_cleaning

./: .gitignore  GEMINI.md  README.md  build_exe.bat  config.json  create_package.bat  deploy_to_shared.bat  pyproject.toml  requirements-dev.txt  requirements.txt  version.txt  version_info.txt  インストール案内.md  洗浄依頼_要件定義書.md
src/: config.py  database.py  main.py  main_window.py  models.py
tests/: README.md
洗浄依頼管理App/: README.txt  config.json
